apps/services/jellyfin/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
  - name: http
    port: 8096
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  # sessionAffinity: None
  type: LoadBalancer
